
	* TODO8:

	# implement better unit testing.
	## autograd.jl: add enough primitives to knetarray to pass the autograd tests converted to knetarrays.
	# add back cpu convolution
	# figure out rtfd doc setup or forwarding.
	# fix unclear docs for optimization, tutorial example?
	# override KnetArray and Array instead of cpu2gpu etc.
	# KnetArray does not work on cpu-only (should it?)
	# copy! for KnetArray missing. (we have fill!, rand! etc. is copy! supported by AutoGrad?)
	# docs todo: perceptron. kernel perceptron. svm. lenet and vgg in cnn section.
	# charlm: add dropout, add adam, functional lstm interface defining multi-output grad2 function.
	# charlm: try indexing op instead of sparse matmul.
	# charlm: try lstm time concatenation.
	# optimization:
	## make BLK,THR dependent on the input size? may improve final sum which is only 10x100 in this example.
	## extend benchmark tests to cover all combinations of 10,100,1000 dimensions.
	## optimize reduction and broadcasting kernels.
	## optimize logp / softmax.
	## optimize conv4 / matmul - arrayfire? cudnn conv instead of matmul? cudnn conv algorithms?
	## try fusion: we can do layers in one kernel call: relu(wx+b).
	## try streams or multiple gpus.
	# mnist2d: implement/test sparse arrays
	# for general arrays: broadcast, get/setindex, h/v/cat.
	# 0.7: rename the 73 functions, cpu tests (add conv), v0.5 compat.
	# gputests.jl and cputests.jl are broken.
	# find out why benchmarks are slower on julia5/6.
	# resolve issues
	# check old todo list
	# deepcopy does not work for KnetArray

2017-02-08  Deniz Yuret  <dyuret@ku.edu.tr>

	* Documenter.jl: (TODO) Julia documentation moved back to MD
	supported by Documenter.jl.  Supports latex, doctest, xrefs,
	search.  Hosted on github pages built throgh Travis (no need for
	Python).  PDF output?  PDF:
	https://juliadocs.github.io/Documenter.jl/stable/lib/internals/writers.html
	Automatic conversion from rst? Try Pandoc.  Use markdown_github as
	output.